Fix z-index for filters icon

--- a/src/ui/components/Widgets/Chart/ChartWidget.scss
+++ b/src/ui/components/Widgets/Chart/ChartWidget.scss
@@ -26,7 +26,7 @@ $dashPublicContainerClassName: '.dash';
         position: absolute;
         top: 4px;
         right: 4px;
-        z-index: 1000;
+        z-index: 10;
         background-color: var(--g-color-base-background);
         padding: 2px;
         border-radius: var(--yc-border-radius-l);
